projekt-kubernetes/kub/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: postgres-secret
          image: postgres:latest
          name: db
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
            - mountPath: /docker-entrypoint-initdb.d/schema.sql
              name: db-cm1
              readOnly: true
              subPath: schema.sql
      restartPolicy: Always
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
        - configMap:
            items:
              - key: schema.sql
                path: schema.sql
            name: db-cm1
          name: db-cm1
