projekt-kubernetes/kub/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - args:
            - npm
            - run
            - start
          # image: tymonjs/frontend:latest
          image: frontend-kub:latest
          imagePullPolicy: IfNotPresent
          name: frontend
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
