projekt-kubernetes/kub/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - args:
            - start-dev
            - --import-realm
          image: quay.io/keycloak/keycloak:26.1.4
          name: keycloak
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/keycloak/data
              name: keycloak-data
            - mountPath: /opt/keycloak/data/import/realm-export.json
              name: keycloak-cm1
              subPath: realm-export.json
      restartPolicy: Always
      volumes:
        - name: keycloak-data
          persistentVolumeClaim:
            claimName: keycloak-data
        - configMap:
            items:
              - key: realm-export.json
                path: realm-export.json
            name: keycloak-cm1
          name: keycloak-cm1
