projekt-kubernetes/kub/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  ports:
    - name: "3001"
      port: 3001
      targetPort: 3001
  selector:
    app: api
